# Jarvis

./: .env.example  README.md  bot.py  cli.py  db.py  llm_provider.py  main.py  migrate_to_sqlite.py  pyproject.toml  requirements.txt  store.py  stt.py  test_openai.py
.github/workflows/: ci.yml  publish.yml
data/: events.json  reminders.json  tasks.json
docs/: propensity_tutorial.md
jarvis/: __init__.py  bot.py  cli.py  llm_provider.py  store.py  stt.py
tests/: conftest.py  test_bot.py  test_store.py  test_stt.py  test_timezone.py
